--- a/src/ContentBenchmarks/Benchmarks.Kni.UWP.Xaml/MainPage.xaml
+++ b/src/ContentBenchmarks/Benchmarks.Kni.UWP.Xaml/MainPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Benchmarks.GamePage"
+    x:Class="Benchmarks.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Benchmarks"
@@ -7,6 +7,6 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-  <SwapChainPanel x:Name="swapChainPanel" />
+    <SwapChainPanel x:Name="swapChainPanel" />
 
 </Page>
