--- a/src/DrawBenchmarks/Benchmarks.Kni.WinUI/MainPage.xaml
+++ b/src/DrawBenchmarks/Benchmarks.Kni.WinUI/MainPage.xaml
@@ -3,6 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Benchmarks.MainPage">
 
-    <Grid></Grid>
+    <SwapChainPanel x:Name="swapChainPanel" />
 
 </ContentPage>
